testing to fix this godforsaken right edge whitespace

--- a/header.css
+++ b/header.css
@@ -9,11 +9,10 @@ div {
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 30px;
-  width: 100%;
   background-color: rgb(235 235 235);
 
   border-bottom: 1px solid rgb(150 150 150);
-  /*box-shadow: 1px 5px 8px rgba(0, 0, 0, .3);*/
+  box-shadow: 1px 5px 8px rgba(0, 0, 0, .3);
 }
 
 .header > div {
